gcs/prod/networkService/api-debug-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: api-debug
  name: api-debug
  namespace: default
spec:
  ports:
    port: 80
    protocol: TCP
  selector:
    run: api-debug
  type: NodePort
