gcs/prod/networkService/api-debug-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-debug
spec:
  tls:
    - secretName: starchup-ssl-2021
  backend:
    serviceName: api-debug
    servicePort: 80
